--- a/package.json
+++ b/package.json
@@ -1,43 +1,53 @@
 {
-  "name": "vscode-uri",
-  "author": "Microsoft",
-  "version": "3.0.8",
-  "description": "The URI implementation that is used by VS Code and its extensions",
-  "main": "./lib/umd/index.js",
-  "typings": "./lib/umd/index",
-  "exports": {
-    "import": "./lib/esm/index.mjs",
-    "require": "./lib/umd/index.js",
-    "types": "./lib/umd/index.d.ts",
-    "browser": "./lib/esm/index.mjs"
-  },
-  "sideEffects": false,
-  "scripts": {
-    "clean": "rimraf lib",
-    "pack-production": "webpack --mode=production",
-    "pack-dev": "webpack",
-    "compile": "tsc -p ./src",
-    "prepublish": "npm run pack-production",
-    "test": "tsc -p ./src && npm run pack-dev && mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/microsoft/vscode-uri.git"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/microsoft/vscode-uri/issues"
-  },
-  "homepage": "https://github.com/microsoft/vscode-uri#readme",
-  "devDependencies": {
-    "@types/mocha": "^10.0.2",
-    "@types/node": "16.x",
-    "mocha": "^10.2.0",
-    "path-browserify": "^1.0.1",
-    "rimraf": "^5.0.5",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  }
+	"name": "vscode-uri",
+	"version": "0.0.1",
+	"private": false,
+	"description": "The URI implementation that is used by VS Code and its extensions",
+	"homepage": "https://github.com/CodeEditorLand/Foundation#readme",
+	"bugs": {
+		"url": "https://github.com/CodeEditorLand/Foundation/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/CodeEditorLand/Foundation.git"
+	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "Playform",
+		"email": "Hello@Playform.Cloud",
+		"url": "https://playform.cloud"
+	},
+	"sideEffects": false,
+	"type": "module",
+	"exports": {
+		"browser": "./lib/esm/index.mjs",
+		"import": "./lib/esm/index.mjs",
+		"require": "./lib/umd/index.js",
+		"types": "./lib/umd/index.d.ts"
+	},
+	"main": "./lib/umd/index.js",
+	"typings": "./lib/umd/index",
+	"scripts": {
+		"clean": "rimraf lib",
+		"compile": "tsc -p ./src",
+		"pack-dev": "webpack",
+		"pack-production": "webpack --mode=production",
+		"prepublishOnly": "TypeScriptESBuild 'Source/**/*.ts'",
+		"prepublish": "npm run pack-production"
+	},
+	"devDependencies": {
+		"@types/mocha": "^10.0.2",
+		"@types/node": "16.x",
+		"mocha": "^10.2.0",
+		"path-browserify": "^1.0.1",
+		"rimraf": "^5.0.5",
+		"ts-loader": "^9.4.4",
+		"typescript": "^5.2.2",
+		"typescript-esbuild": "latest",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
