--- a/package.json
+++ b/package.json
@@ -1,43 +1,13 @@
 {
-	"name": "vscode-uri",
-	"version": "0.0.1",
-	"private": false,
-	"description": "The URI implementation that is used by VS Code and its extensions",
-	"keywords": [
-		"land"
-	],
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandURI#readme",
+	"author": {
+		"email": "Land@PlayForm.Cloud",
+		"name": "🌆 — Land —",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandURI/issues"
 	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandURI.git"
-	},
-	"license": "SEE LICENSE IN LICENSE",
-	"author": {
-		"name": "🌆 — Land —",
-		"email": "Land@PlayForm.Cloud",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
-	"sideEffects": false,
-	"type": "module",
-	"exports": {
-		"browser": "./lib/esm/index.mjs",
-		"import": "./lib/esm/index.mjs",
-		"require": "./lib/umd/index.js",
-		"types": "./lib/umd/index.d.ts"
-	},
-	"main": "./lib/umd/index.js",
-	"typings": "./lib/umd/index",
-	"scripts": {
-		"Document": "Document 'Source/**/*.ts'",
-		"clean": "rimraf lib",
-		"compile": "tsc -p ./src",
-		"pack-dev": "webpack",
-		"pack-production": "webpack --mode=production",
-		"prepublishOnly": "Build 'Source/**/*.ts'"
-	},
+	"description": "The URI implementation that is used by VS Code and its extensions",
 	"devDependencies": {
 		"@playform/build": "0.0.7",
 		"@playform/document": "0.0.6",
@@ -46,7 +16,37 @@
 		"rimraf": "5.0.5",
 		"ts-loader": "9.5.1"
 	},
+	"exports": {
+		"browser": "./lib/esm/index.mjs",
+		"import": "./lib/esm/index.mjs",
+		"require": "./lib/umd/index.js",
+		"types": "./lib/umd/index.d.ts"
+	},
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandURI#readme",
+	"keywords": [
+		"land"
+	],
+	"license": "SEE LICENSE IN LICENSE",
+	"main": "./lib/umd/index.js",
+	"name": "vscode-uri",
+	"private": false,
 	"publishConfig": {
 		"access": "public"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/LandURI.git"
+	},
+	"scripts": {
+		"Document": "Document 'Source/**/*.ts'",
+		"clean": "rimraf lib",
+		"compile": "tsc -p ./src",
+		"pack-dev": "webpack",
+		"pack-production": "webpack --mode=production",
+		"prepublishOnly": "Build 'Source/**/*.ts'"
+	},
+	"sideEffects": false,
+	"type": "module",
+	"typings": "./lib/umd/index",
+	"version": "0.0.1"
 }
