--- a/package.json
+++ b/package.json
@@ -1,42 +1,35 @@
 {
-	"author": {
-		"email": "Land@PlayForm.Cloud",
-		"name": "🌆 — Land —",
-		"url": "HTTPS://Land.PlayForm.Cloud"
-	},
+	"name": "vscode-uri",
+	"version": "0.0.1",
+	"private": false,
+	"description": "The URI implementation that is used by VS Code and its extensions",
+	"keywords": [
+		"land"
+	],
+	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandURI#readme",
 	"bugs": {
 		"url": "HTTPS://GitHub.Com/CodeEditorLand/LandURI/issues"
 	},
-	"description": "The URI implementation that is used by VS Code and its extensions",
-	"devDependencies": {
-		"@playform/build": "0.0.7",
-		"@playform/document": "0.0.6",
-		"@types/node": "20.x",
-		"path-browserify": "1.0.1",
-		"rimraf": "5.0.5",
-		"ts-loader": "9.5.1"
+	"repository": {
+		"type": "git",
+		"url": "git+HTTPS://github.com/CodeEditorLand/LandURI.git"
 	},
+	"license": "SEE LICENSE IN LICENSE",
+	"author": {
+		"name": "🌆 — Land —",
+		"email": "Land@PlayForm.Cloud",
+		"url": "HTTPS://Land.PlayForm.Cloud"
+	},
+	"sideEffects": false,
+	"type": "module",
 	"exports": {
 		"browser": "./lib/esm/index.mjs",
 		"import": "./lib/esm/index.mjs",
 		"require": "./lib/umd/index.js",
 		"types": "./lib/umd/index.d.ts"
 	},
-	"homepage": "HTTPS://GitHub.Com/CodeEditorLand/LandURI#readme",
-	"keywords": [
-		"land"
-	],
-	"license": "SEE LICENSE IN LICENSE",
 	"main": "./lib/umd/index.js",
-	"name": "vscode-uri",
-	"private": false,
-	"publishConfig": {
-		"access": "public"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+HTTPS://github.com/CodeEditorLand/LandURI.git"
-	},
+	"typings": "./lib/umd/index",
 	"scripts": {
 		"Document": "Document 'Source/**/*.ts'",
 		"clean": "rimraf lib",
@@ -45,8 +38,15 @@
 		"pack-production": "webpack --mode=production",
 		"prepublishOnly": "Build 'Source/**/*.ts'"
 	},
-	"sideEffects": false,
-	"type": "module",
-	"typings": "./lib/umd/index",
-	"version": "0.0.1"
+	"devDependencies": {
+		"@playform/build": "0.0.7",
+		"@playform/document": "0.0.6",
+		"@types/node": "20.x",
+		"path-browserify": "1.0.1",
+		"rimraf": "5.0.5",
+		"ts-loader": "9.5.1"
+	},
+	"publishConfig": {
+		"access": "public"
+	}
 }
