--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 	},
 	"devDependencies": {
 		"@types/node": "16.x",
-		"path-browserify": "^1.0.1",
-		"rimraf": "^5.0.5",
-		"ts-loader": "^9.4.4"
+		"path-browserify": "1.0.1",
+		"rimraf": "5.0.5",
+		"ts-loader": "9.4.4"
 	}
 }
