--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   },
   "homepage": "https://github.com/microsoft/vscode-uri#readme",
   "devDependencies": {
-    "@types/mocha": "^10.0.2",
-    "@types/node": "16.x",
-    "mocha": "^10.2.0",
-    "path-browserify": "^1.0.1",
-    "rimraf": "^5.0.5",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "@types/mocha": "10.0.6",
+    "@types/node": "20.x",
+    "mocha": "10.4.0",
+    "path-browserify": "1.0.1",
+    "rimraf": "5.0.7",
+    "ts-loader": "9.5.1",
+    "typescript": "5.4.5",
+    "webpack": "5.92.0",
+    "webpack-cli": "5.1.4"
   }
 }
