--- a/Source/tsconfig.json
+++ b/Source/tsconfig.json
@@ -1,13 +1,11 @@
 {
-    "compilerOptions": {
-        "target": "ES2022",
-        "module": "Node16",
-        "declaration": true,
-        "forceConsistentCasingInFileNames": true,
-        "noImplicitAny": true,
-        "lib": [
-            "ES2022"
-        ],
-        "outDir": "../lib/umd"
-    }
+	"compilerOptions": {
+		"target": "ES2022",
+		"module": "Node16",
+		"declaration": true,
+		"forceConsistentCasingInFileNames": true,
+		"noImplicitAny": true,
+		"lib": ["ES2022"],
+		"outDir": "../lib/umd"
+	}
 }
