--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
-  "name": "vscode-uri",
-  "author": "Microsoft",
-  "version": "3.0.8",
-  "description": "The URI implementation that is used by VS Code and its extensions",
-  "main": "./lib/umd/index.js",
-  "typings": "./lib/umd/index",
-  "exports": {
-    "import": "./lib/esm/index.mjs",
-    "require": "./lib/umd/index.js",
-    "types": "./lib/umd/index.d.ts",
-    "browser": "./lib/esm/index.mjs"
-  },
-  "sideEffects": false,
-  "scripts": {
-    "clean": "rimraf lib",
-    "pack-production": "webpack --mode=production",
-    "pack-dev": "webpack",
-    "compile": "tsc -p ./src",
-    "prepublish": "npm run pack-production",
-    "test": "tsc -p ./src && npm run pack-dev && mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/microsoft/vscode-uri.git"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/microsoft/vscode-uri/issues"
-  },
-  "homepage": "https://github.com/microsoft/vscode-uri#readme",
-  "devDependencies": {
-    "@types/mocha": "^10.0.2",
-    "@types/node": "16.x",
-    "mocha": "^10.2.0",
-    "path-browserify": "^1.0.1",
-    "rimraf": "^5.0.5",
-    "ts-loader": "^9.4.4",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  }
+	"description": "The URI implementation that is used by VS Code and its extensions",
+	"devDependencies": {
+		"@types/node": "22.x",
+		"path-browserify": "1.0.1",
+		"rimraf": "6.0.1",
+		"ts-loader": "9.5.1"
+	},
+	"exports": {
+		"browser": "./lib/esm/index.mjs",
+		"import": "./lib/esm/index.mjs",
+		"require": "./lib/umd/index.js",
+		"types": "./lib/umd/index.d.ts"
+	},
+	"main": "./lib/umd/index.js",
+	"name": "vscode-uri",
+	"scripts": {
+		"clean": "rimraf lib",
+		"compile": "tsc -p ./src",
+		"pack-dev": "webpack",
+		"pack-production": "webpack --mode=production"
+	},
+	"sideEffects": false,
+	"typings": "./lib/umd/index"
 }
