--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
+	"name": "vscode-uri",
 	"description": "The URI implementation that is used by VS Code and its extensions",
-	"devDependencies": {
-		"@types/node": "22.9.1",
-		"path-browserify": "1.0.1",
-		"rimraf": "6.0.1",
-		"ts-loader": "9.5.1"
-	},
+	"sideEffects": false,
 	"exports": {
 		"browser": "./lib/esm/index.mjs",
 		"import": "./lib/esm/index.mjs",
@@ -13,13 +9,17 @@
 		"types": "./lib/umd/index.d.ts"
 	},
 	"main": "./lib/umd/index.js",
-	"name": "vscode-uri",
+	"typings": "./lib/umd/index",
 	"scripts": {
 		"clean": "rimraf lib",
 		"compile": "tsc -p ./src",
 		"pack-dev": "webpack",
 		"pack-production": "webpack --mode=production"
 	},
-	"sideEffects": false,
-	"typings": "./lib/umd/index"
+	"devDependencies": {
+		"@types/node": "22.9.1",
+		"path-browserify": "1.0.1",
+		"rimraf": "6.0.1",
+		"ts-loader": "9.5.1"
+	}
 }
